logs/be.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/be'...
Compiling './lib/python3.5/site-packages/be/cli.py'...
***   File "./lib/python3.5/site-packages/be/cli.py", line 230
    exec script in {"__name__": __name__}
              ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/be/lib.py'...
***   File "./lib/python3.5/site-packages/be/lib.py", line 290
    print trimmed_pattern
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/be/vendor'...
Listing './lib/python3.5/site-packages/be/vendor/click'...
Listing './lib/python3.5/site-packages/be/vendor/requests'...
Listing './lib/python3.5/site-packages/be/vendor/requests/packages'...
Listing './lib/python3.5/site-packages/be/vendor/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/be/vendor/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/be/vendor/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/be/vendor/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/be/vendor/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/be/vendor/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/be/vendor/yaml'...
Compiling './lib/python3.5/site-packages/be/vendor/yaml/constructor.py'...
***   File "./lib/python3.5/site-packages/be/vendor/yaml/constructor.py", line 130
    except TypeError, exc:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/be/vendor/yaml/reader.py'...
***   File "./lib/python3.5/site-packages/be/vendor/yaml/reader.py", line 158
    except UnicodeDecodeError, exc:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/be/vendor/yaml/resolver.py'...
***   File "./lib/python3.5/site-packages/be/vendor/yaml/resolver.py", line 171
    re.compile(ur'''^(?:yes|Yes|YES|no|No|NO
                    |true|True|TRUE|false|False|FALSE
                    |on|On|ON|off|Off|OFF)$''', re.X),
                                            
                                                     
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/be/vendor/yaml/scanner.py'...
***   File "./lib/python3.5/site-packages/be/vendor/yaml/scanner.py", line 1427
    except UnicodeDecodeError, exc:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/be-0.3.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil-2.2.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
